fix(tasks): mobile icons
* Fixed the problem (at least i hope so)

* Fixed that annoying horizontal scroll bar (at least i hope so)

---------

--- a/src/app/components/tasks/wave/wave-task-linear/wave-task-linear.component.scss
+++ b/src/app/components/tasks/wave/wave-task-linear/wave-task-linear.component.scss
@@ -17,6 +17,8 @@
       grid-area: icon;
       align-self: center;
       max-height: 3em;
+      max-width: 3em;
+      width: 100%;
     }
 
     .name {
